# codr

./: .gitignore  .releaserc.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  example-config.yaml  package.json
.github/: FUNDING.yaml
.github/workflows/: rust.yaml
codr/: Cargo.toml  README.md  package.json
codr/src/: main.rs
onedrive/: Cargo.toml  README.md  package.json
onedrive/src/: lib.rs  main.rs
