[package]
name = "codr"
author = "Harvey S Prom <harvey_prom@hotmail.com>"
description = "A CLI tool for interacting with OneDrive."
about = "A CLI tool for interacting with OneDrive."
version = "1.0.7"
edition = "2021"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/PromH/codr"
homepage = "https://github.com/PromH/codr"
categories = ["command-line-utilities", "development-tools::build-utils"]

[[bin]]
name = "codr"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onedrive = { path = "../onedrive" , version = "1.0.7" }
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
fern = "0.6"
humantime = "2.1.0"
confy = { version = "0.5.1", features = ["yaml_conf"], default-features = false }
serde = { version = "1.0.167", features = ["derive"] }
serde_derive = "1.0.167"
reqwest = { version = "0.11.8", features = ["blocking", "json"] }
exitcode = "1.1.2"
