[package]
name = "onedrive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
oauth2 = "4.4.1"
log = "0.4"
fern = "0.6"
humantime = "2.1.0"
open = "5.0.0"
url = { version = "2.1", features = ["serde"] }