[package]
name = "onedrive"
author = "Harvey S Prom <harvey_prom@hotmail.com>"
description = "A library package for interacting with OneDrive"
about = "A library package for interacting with OneDrive"
version = "1.1.2"
edition = "2021"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/PromH/codr"
homepage = "https://github.com/PromH/codr"

[lib]
name = "onedrive"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
oauth2 = "4.4.1"
log = "0.4"
fern = "0.6"
humantime = "2.1.0"
open = "5.0.0"
chrono = "0.4.26"
url = { version = "2.1", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
confy = { version = "0.5.1", features = ["yaml_conf"], default-features = false }
serde = { version = "1.0.167", features = ["derive"] }
serde_derive = "1.0.167"
reqwest = { version = "0.11.8", features = ["blocking", "json"] }
serde_json = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
bytes = { version = "1", features = ["serde"] }
indicatif = "0.17.5"
